tests/A2/reject/badWhile.ul
void main(){
    int x;

    x = 3;

    while(x){
        x = x+1;
    }
}